--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node src/bin.js"
   },
   "dependencies": {
-    "ipfs": "^0.33.1"
+    "ipfs": "^0.33.1",
+    "openpgp": "^4.2.1"
   }
 }
